crates/config/tests/snapshots/nested_prefix_quoted_inner_key.snap
---
source: crates/config/tests/snapshots.rs
---
# nested-prefix-quoted-inner-key

## Input

```mical
s {
"inner" {
k v
}
}

```

## JSON

```json
{
  "sinnerk": "v"
}
```

vim:ft=markdown
