crates/config/tests/snapshots/newline.snap
---
source: crates/config/tests/snapshots.rs
---
# newline

## Input

```mical


```

## JSON

```json
{}
```

vim:ft=markdown
