crates/config/tests/snapshots/prefix_block_after_entry.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-after-entry

## Input

```mical
before hello
section {
  key value
}
after world

```

## JSON

```json
{
  "before": "hello",
  "sectionkey": "value",
  "after": "world"
}
```

vim:ft=markdown
