crates/config/tests/snapshots/prefix_block_basic.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-basic

## Input

```mical
server.
  host localhost
  port 8080

```

## JSON

```json
{
  "server.host": "localhost",
  "server.port": 8080
}
```

vim:ft=markdown
