crates/config/tests/snapshots/prefix_block_block_string_nested.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-block-string-nested

## Input

```mical
outer {
  inner {
    desc |
      line 1
      line 2
    name value
  }
}

```

## JSON

```json
{
  "outerinnerdesc": "line 1\nline 2\n",
  "outerinnername": "value"
}
```

vim:ft=markdown
