crates/config/tests/snapshots/prefix_block_close_brace_as_key.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-close-brace-as-key

## Input

```mical
section {
  } value
}

```

## JSON

```json
{
  "section}": "value"
}
```

vim:ft=markdown
