crates/config/tests/snapshots/prefix_block_comment.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-comment

## Input

```mical
s {
  # comment
  key value
}

```

## JSON

```json
{
  "skey": "value"
}
```

vim:ft=markdown
